// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Question Should render checkboxes properly 1`] = `
Array [
  <div
    className="fields"
  >
    <div
      className="eight wide field"
    >
      <label
        htmlFor="q0__name"
      >
        Question #1
      </label>
      <div
        className="ui input"
      >
        <input
          id="q0__name"
          onChange={[Function]}
          type="text"
          value="question 1"
        />
      </div>
    </div>
    <div
      className="four wide field"
    >
      <label
        htmlFor="q0__type"
      >
        Question #1 Type
      </label>
      <div
        aria-expanded={false}
        className="ui fluid selection dropdown"
        id="q0__type"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          className="text"
          role="alert"
        >
          Checkboxes
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Short Answer
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Dropdown
            </span>
          </div>
          <div
            aria-checked={true}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Checkboxes
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Paragraph
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="two wide field Question-checkbox"
    >
      <div
        className="ui checkbox"
        onChange={[Function]}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
      >
        <input
          checked={false}
          className="hidden"
          id="q0__req"
          readOnly={true}
          tabIndex={0}
          type="checkbox"
        />
        <label
          htmlFor="q0__req"
        >
          Is Required
        </label>
      </div>
    </div>
    <div
      className="two wide field Question-deleteBtn"
    >
      <button
        className="ui button"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </div>
  </div>,
  <div
    className="fields"
  >
    <div
      className="sixteen wide field"
    >
      <label
        htmlFor="q0__options"
      >
        Question #1 type options
      </label>
      <div
        className="ui input"
      >
        <input
          id="q0__options"
          onChange={[Function]}
          placeholder="a, b, c, d"
          type="text"
          value="a, b"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Question Should render dropdown properly 1`] = `
Array [
  <div
    className="fields"
  >
    <div
      className="eight wide field"
    >
      <label
        htmlFor="q1__name"
      >
        Question #2
      </label>
      <div
        className="ui input"
      >
        <input
          id="q1__name"
          onChange={[Function]}
          type="text"
          value="question 2"
        />
      </div>
    </div>
    <div
      className="four wide field"
    >
      <label
        htmlFor="q1__type"
      >
        Question #2 Type
      </label>
      <div
        aria-expanded={false}
        className="ui fluid selection dropdown"
        id="q1__type"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseDown={[Function]}
        role="listbox"
        tabIndex={0}
      >
        <div
          aria-atomic={true}
          aria-live="polite"
          className="text"
          role="alert"
        >
          Dropdown
        </div>
        <i
          aria-hidden="true"
          className="dropdown icon"
          onClick={[Function]}
        />
        <div
          className="menu transition"
        >
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Short Answer
            </span>
          </div>
          <div
            aria-checked={true}
            aria-selected={true}
            className="active selected item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Dropdown
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Checkboxes
            </span>
          </div>
          <div
            aria-checked={false}
            aria-selected={false}
            className="item"
            onClick={[Function]}
            role="option"
            style={
              Object {
                "pointerEvents": "all",
              }
            }
          >
            <span
              className="text"
            >
              Paragraph
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="two wide field Question-checkbox"
    >
      <div
        className="ui checkbox"
        onChange={[Function]}
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
      >
        <input
          checked={false}
          className="hidden"
          id="q1__req"
          readOnly={true}
          tabIndex={0}
          type="checkbox"
        />
        <label
          htmlFor="q1__req"
        >
          Is Required
        </label>
      </div>
    </div>
    <div
      className="two wide field Question-deleteBtn"
    >
      <button
        className="ui button"
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </div>
  </div>,
  <div
    className="fields"
  >
    <div
      className="sixteen wide field"
    >
      <label
        htmlFor="q1__options"
      >
        Question #2 type options
      </label>
      <div
        className="ui input"
      >
        <input
          id="q1__options"
          onChange={[Function]}
          placeholder="a, b, c, d"
          type="text"
          value="a, b, c, d"
        />
      </div>
    </div>
  </div>,
]
`;

exports[`Question Should render paragraph properly 1`] = `
<div
  className="fields"
>
  <div
    className="eight wide field"
  >
    <label
      htmlFor="q2__name"
    >
      Question #3
    </label>
    <div
      className="ui input"
    >
      <input
        id="q2__name"
        onChange={[Function]}
        type="text"
        value="question 3"
      />
    </div>
  </div>
  <div
    className="four wide field"
  >
    <label
      htmlFor="q2__type"
    >
      Question #3 Type
    </label>
    <div
      aria-expanded={false}
      className="ui fluid selection dropdown"
      id="q2__type"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        className="text"
        role="alert"
      >
        Paragraph
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Short Answer
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Dropdown
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Checkboxes
          </span>
        </div>
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Paragraph
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="two wide field Question-checkbox"
  >
    <div
      className="ui checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        id="q2__req"
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <label
        htmlFor="q2__req"
      >
        Is Required
      </label>
    </div>
  </div>
  <div
    className="two wide field Question-deleteBtn"
  >
    <button
      className="ui button"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
</div>
`;

exports[`Question Should render short answers properly 1`] = `
<div
  className="fields"
>
  <div
    className="eight wide field"
  >
    <label
      htmlFor="q3__name"
    >
      Question #4
    </label>
    <div
      className="ui input"
    >
      <input
        id="q3__name"
        onChange={[Function]}
        type="text"
        value="question 4"
      />
    </div>
  </div>
  <div
    className="four wide field"
  >
    <label
      htmlFor="q3__type"
    >
      Question #4 Type
    </label>
    <div
      aria-expanded={false}
      className="ui fluid selection dropdown"
      id="q3__type"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        className="text"
        role="alert"
      >
        Short Answer
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={true}
          aria-selected={true}
          className="active selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Short Answer
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Dropdown
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Checkboxes
          </span>
        </div>
        <div
          aria-checked={false}
          aria-selected={false}
          className="item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Paragraph
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    className="two wide field Question-checkbox"
  >
    <div
      className="ui checkbox"
      onChange={[Function]}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <input
        checked={false}
        className="hidden"
        id="q3__req"
        readOnly={true}
        tabIndex={0}
        type="checkbox"
      />
      <label
        htmlFor="q3__req"
      >
        Is Required
      </label>
    </div>
  </div>
  <div
    className="two wide field Question-deleteBtn"
  >
    <button
      className="ui button"
      onClick={[Function]}
      type="button"
    >
      X
    </button>
  </div>
</div>
`;
